
  Added sigexit=1 option to enable a useable profile when the process
    exits due to a signals (catches INT HUP PIPE BUS SEGV by default)
    Can also do sigexit=TRAP,ABRT,SYS,... to hook specific signals.
    Thanks to Andrew Sterling Hanenkamp for the seed of this idea.

  Added forkdepth=N option to enable profiling to be turned off after N
    generations of fork().

  Added initial support for profiling PostgreSQL PL/Perl code
    via Devel::NYTProf::PgPLPerl module.

Changes to subroutine profiler:

  Rewritten. Captures more data more accurately and robustly.
  Added profiling of calls to xsubs that exit via an exception.
  Added profiling of goto &sub;
  Added recording the name of the calling subroutine to enable proper
    linking of call trees. Previously only the calling file and line
    were recorded. (This is more significant than it sounds :)
  Added docs describing how the subroutine profiler works.

Changes to nytprofhtml:

  Added interactive treemap view of package and subroutine times.
    Left-click to zoom in (drill-down) one level, right-click to zoom out.

  Added generation of GraphViz dot language files to visualize
    the call graph. A top-level link on the index page provides an
    inter-package graph, and per-source-file links provide a graph
    of sub calls in to, out of, and between the subs in the file.
    See http://en.wikipedia.org/wiki/Graphviz

  Added columns to the main source code reports to show
    a count of sub calls and time spent in those calls.

  Assorted cosmetic improvements.
  Changed colors on report pages to be less saturated.


=head2 Changes in Devel::NYTProf 2.10 (svn r774) 18th June 2009

  Fixed call count for XSubs that was one too high.
  Fixed enable_profile() after fork thanks to delamonpansie
    http://code.google.com/p/perl-devel-nytprof/issues/detail?id=15
  Fixed to use correct scripts during test and so avoid permissions
    issues, thanks to David Golden.